fix color to black for buttons on mobile

--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,7 @@ html,
 body {
   background-color: paleturquoise;
   padding: 0;
+  color: black;
 } 
 
 .favorites-collection h3,
@@ -69,6 +70,7 @@ nav.navbar {
   font-weight: 900;
   padding: 1px 15px;
   z-index: 60;
+  color: black;
 }
 
 .go-to-favorites-collection,
